Amelioration functions validation for input checkbox & radio + few minors corrections (suppr useless min-width for <body> on CSS & amelioration layout file javascript for better visibility)

--- a/css/modal.css
+++ b/css/modal.css
@@ -18,7 +18,6 @@ body {
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
-  min-width: 280px;
   margin: 0 auto;
 }
 
